--- a/fabricjschess/restart.html
+++ b/fabricjschess/restart.html
@@ -35,6 +35,26 @@
             }
         }
 
+        // Load images for chess pieces from Wikipedia
+        const pieceImages = {
+            black: {
+                rook: 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+                knight: 'https://upload.wikimedia.org/wikipedia/commons/2/28/Chess_nlt45.svg',
+                bishop: 'https://upload.wikimedia.org/wikipedia/commons/a/a0/Chess_blt45.svg',
+                queen: 'https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qlt45.svg',
+                king: 'https://upload.wikimedia.org/wikipedia/commons/3/3b/Chess_klt45.svg',
+                pawn: 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+            },
+            white: {
+                rook: 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_rdt45.svg',
+                knight: 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_ndt45.svg',
+                bishop: 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+                queen: 'https://upload.wikimedia.org/wikipedia/commons/e/e3/Chess_qdt45.svg',
+                king: 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_kdt45.svg',
+                pawn: 'https://upload.wikimedia.org/wikipedia/commons/0/0b/Chess_pdt45.svg'
+            }
+        };
+
         // Add pieces to the board
         function addPieces() {
             const pieces = [
@@ -46,9 +66,7 @@
                 { type: 'bishop', color: 'black', position: { left: 5, top: 0 } },
                 { type: 'knight', color: 'black', position: { left: 6, top: 0 } },
                 { type: 'rook', color: 'black', position: { left: 7, top: 0 } },
-                // Add pawns
                 ...Array.from({ length: 8 }, (_, i) => ({ type: 'pawn', color: 'black', position: { left: i, top: 1 } })),
-                // Add white pieces
                 { type: 'rook', color: 'white', position: { left: 0, top: 7 } },
                 { type: 'knight', color: 'white', position: { left: 1, top: 7 } },
                 { type: 'bishop', color: 'white', position: { left: 2, top: 7 } },
@@ -57,21 +75,20 @@
                 { type: 'bishop', color: 'white', position: { left: 5, top: 7 } },
                 { type: 'knight', color: 'white', position: { left: 6, top: 7 } },
                 { type: 'rook', color: 'white', position: { left: 7, top: 7 } },
-                // Add white pawns
                 ...Array.from({ length: 8 }, (_, i) => ({ type: 'pawn', color: 'white', position: { left: i, top: 6 } })),
             ];
 
             pieces.forEach(piece => {
-                const circle = new fabric.Circle({
-                    left: piece.position.left * squareSize + squareSize / 2,
-                    top: piece.position.top * squareSize + squareSize / 2,
-                    radius: 20,
-                    fill: piece.color,
-                    selectable: true,
-                    hasControls: false,
-                    hasBorders: false
+                fabric.Image.fromURL(pieceImages[piece.color][piece.type], function(img) {
+                    img.set({
+                        left: piece.position.left * squareSize,
+                        top: piece.position.top * squareSize,
+                        scaleX: squareSize / img.width,
+                        scaleY: squareSize / img.height,
+                        selectable: true
+                    });
+                    canvas.add(img);
                 });
-                canvas.add(circle);
             });
         }
 
