--- a/fabricjschess/restart2.html
+++ b/fabricjschess/restart2.html
@@ -3,87 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabric.js Chessboard with Annotations</title>
+    <title>Fabric.js Chessboard with Moveable Pieces</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <style>
         canvas {
             border: 1px solid #000;
         }
-        #history {
-            width: 400px;
-            height: 200px;
-            overflow-y: auto;
-            border: 1px solid #000;
-            margin-top: 10px;
-            padding: 5px;
-        }
-        #hud {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        #instructions {
-            margin-top: 10px;
-            font-size: 14px;
-        }
     </style>
 </head>
 <body>
-    <div id="hud">
-        <div id="white-timer">White: 00:00</div>
-        <div id="black-timer">Black: 00:00</div>
-    </div>
     <canvas id="canvas" width="400" height="400"></canvas>
-    <div id="history"></div>
-    <div id="instructions">
-        <h4>How to Play Chess:</h4>
-        <p>1. Each player takes turns moving one piece.</p>
-        <p>2. The objective is to checkmate the opponent's king.</p>
-        <p>3. Each piece has its own movement rules:</p>
-        <ul>
-            <li>King: Moves one square in any direction.</li>
-            <li>Queen: Moves any number of squares in any direction.</li>
-            <li>Rook: Moves any number of squares horizontally or vertically.</li>
-            <li>Bishop: Moves any number of squares diagonally.</li>
-            <li>Knight: Moves in an L-shape (two squares in one direction and then one square perpendicular).</li>
-            <li>Pawn: Moves forward one square, but captures diagonally.</li>
-        </ul>
-        <p>4. Use algebraic notation (e.g., e2 to e4) for moves.</p>
-    </div>
     <script>
+        // Initialize Fabric.js canvas
         const canvas = new fabric.Canvas('canvas');
-        const squareSize = 50;
-        let turn = 'white';
-        const history = [];
-        let whiteTime = 300; // 5 minutes
-        let blackTime = 300; // 5 minutes
-        let timerInterval;
+        const squareSize = 50; // Size of each square
+        let turn = 'white'; // White goes first
 
-        function startTimer() {
-            clearInterval(timerInterval);
-            timerInterval = setInterval(() => {
-                if (turn === 'white') {
-                    whiteTime--;
-                    updateTimerDisplay('white');
-                } else {
-                    blackTime--;
-                    updateTimerDisplay('black');
-                }
-            }, 1000);
-        }
-
-        function updateTimerDisplay(color) {
-            const timerElement = document.getElementById(`${color}-timer`);
-            const time = color === 'white' ? whiteTime : blackTime;
-            const minutes = String(Math.floor(time / 60)).padStart(2, '0');
-            const seconds = String(time % 60).padStart(2, '0');
-            timerElement.innerText = `${color.charAt(0).toUpperCase() + color.slice(1)}: ${minutes}:${seconds}`;
-            if (time <= 0) {
-                clearInterval(timerInterval);
-                alert(`${color.charAt(0).toUpperCase() + color.slice(1)} time's up!`);
-            }
-        }
-
+        // Create the chessboard
         function createChessboard() {
             for (let row = 0; row < 8; row++) {
                 for (let col = 0; col < 8; col++) {
@@ -91,7 +27,7 @@
                     const square = new fabric.Rect({
                         left: col * squareSize,
                         top: row * squareSize,
-                        fill: isLightSquare ? '#eee' : '#8B4513',
+                        fill: isLightSquare ? '#eee' : '#8B4513', // Dark brown for dark squares
                         width: squareSize,
                         height: squareSize,
                         selectable: false
@@ -99,34 +35,9 @@
                     canvas.add(square);
                 }
             }
-
-            // Mark ranks (1-8)
-            for (let i = 0; i < 8; i++) {
-                const text = new fabric.Text((8 - i).toString(), {
-                    left: 0,
-                    top: i * squareSize + squareSize / 2,
-                    fontSize: 20,
-                    originX: 'center',
-                    originY: 'center',
-                    selectable: false
-                });
-                canvas.add(text);
-            }
-
-            // Mark files (a-h)
-            for (let i = 0; i < 8; i++) {
-                const text = new fabric.Text(String.fromCharCode(97 + i), {
-                    left: i * squareSize + squareSize / 2,
-                    top: 400,
-                    fontSize: 20,
-                    originX: 'center',
-                    originY: 'center',
-                    selectable: false
-                });
-                canvas.add(text);
-            }
         }
 
+        // Load SVG pieces onto the chessboard
         function addPieces() {
             const pieces = {
                 'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
@@ -158,6 +69,7 @@
                 for (let col = 0; col < 8; col++) {
                     const piece = boardState[row][col];
                     if (piece !== '.') {
+                        // Load the SVG piece
                         fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
                             const svgPiece = fabric.util.groupSVGElements(objects, options);
                             svgPiece.set({
@@ -167,25 +79,31 @@
                                 originY: 'center',
                                 hasControls: false,
                                 selectable: true,
-                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black'
+                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black' // Track piece color
                             });
 
-                            // Mouse event handlers
+                            // Handle mouse down event
                             svgPiece.on('mousedown', function() {
-                                console.log(`Piece selected: ${piece}`);
                                 if ((turn === 'white' && this.pieceColor === 'white') || 
                                     (turn === 'black' && this.pieceColor === 'black')) {
+                                    console.log(`Selected ${this.pieceColor} piece`);
+                                    this.set({ opacity: 0.5 }); // Dim the selected piece
                                     canvas.setActiveObject(this);
+                                } else {
+                                    console.log(`It's not your turn to move ${this.pieceColor} pieces.`);
                                 }
                             });
+
+                            // Handle mouse up event
                             svgPiece.on('mouseup', function() {
-                                const activeObject = canvas.getActiveObject();
-                                if (activeObject === this) {
-                                    const fromPosition = coordsToPosition(this.left, this.top);
-                                    console.log(`Move from: ${fromPosition}`);
-                                    alert(`Select destination square for ${piece} (current position: ${fromPosition})`);
+                                if (canvas.getActiveObject() === this) {
+                                    console.log(`Released ${this.pieceColor} piece`);
+                                    this.set({ opacity: 1 }); // Restore opacity
+                                    turn = turn === 'white' ? 'black' : 'white'; // Switch turns
+                                    console.log(`Turn switched to ${turn}`);
                                 }
                             });
+
                             canvas.add(svgPiece);
                         });
                     }
@@ -193,17 +111,19 @@
             }
         }
 
-        function coordsToPosition(left, top) {
-            const col = Math.floor(left / squareSize);
-            const row = 8 - Math.floor(top / squareSize);
-            return String.fromCharCode(col + 'a'.charCodeAt(0)) + row;
-        }
+        // Initialize the chessboard and add the pieces
+        createChessboard();
+        addPieces();
 
-        function updateHistory(move) {
-            history.push(move);
-            const historyDiv = document.getElementById('history');
-            historyDiv.innerHTML = history.join('<br/>');
-        }
-
-        function movePiece(from, to) {
-            const piece
+        // Enable piece dragging
+        canvas.on('object:moving', function(e) {
+            const obj = e.target;
+            obj.set({
+                left: Math.round(obj.left / squareSize) * squareSize + squareSize / 2,
+                top: Math.round(obj.top / squareSize) * squareSize + squareSize / 2
+            });
+            console.log(`Moving piece to (${obj.left}, ${obj.top})`);
+        });
+    </script>
+</body>
+</html>
