--- a/fabricjschess/restart2.html
+++ b/fabricjschess/restart2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabric.js Chessboard with Enhanced Features</title>
+    <title>Fabric.js Chessboard with Annotations</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <style>
         canvas {
@@ -22,6 +22,10 @@
             justify-content: space-between;
             margin-bottom: 10px;
         }
+        #instructions {
+            margin-top: 10px;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -31,179 +35,184 @@
     </div>
     <canvas id="canvas" width="400" height="400"></canvas>
     <div id="history"></div>
+    <div id="instructions">
+        <h4>How to Play Chess:</h4>
+        <p>1. Each player takes turns moving one piece.</p>
+        <p>2. The objective is to checkmate the opponent's king.</p>
+        <p>3. Each piece has its own movement rules:</p>
+        <ul>
+            <li>King: Moves one square in any direction.</li>
+            <li>Queen: Moves any number of squares in any direction.</li>
+            <li>Rook: Moves any number of squares horizontally or vertically.</li>
+            <li>Bishop: Moves any number of squares diagonally.</li>
+            <li>Knight: Moves in an L-shape (two squares in one direction and then one square perpendicular).</li>
+            <li>Pawn: Moves forward one square, but captures diagonally.</li>
+        </ul>
+        <p>4. Use algebraic notation (e.g., e2 to e4) for moves.</p>
+    </div>
     <script>
-        const canvas = new fabric.Canvas('canvas');
-        const squareSize = 50;
-        let turn = 'white';
-        const history = [];
-        let whiteTime = 300; // 5 minutes
-        let blackTime = 300; // 5 minutes
-        let timerInterval;
+        document.addEventListener('DOMContentLoaded', () => {
+            const canvas = new fabric.Canvas('canvas');
+            const squareSize = 50;
+            let turn = 'white';
+            const history = [];
+            let whiteTime = 300; // 5 minutes
+            let blackTime = 300; // 5 minutes
+            let timerInterval;
 
-        // Initialize the timers
-        function startTimer() {
-            clearInterval(timerInterval);
-            timerInterval = setInterval(() => {
-                if (turn === 'white') {
-                    whiteTime--;
-                    updateTimerDisplay('white');
-                } else {
-                    blackTime--;
-                    updateTimerDisplay('black');
-                }
-            }, 1000);
-        }
-
-        function updateTimerDisplay(color) {
-            const timerElement = document.getElementById(`${color}-timer`);
-            const time = color === 'white' ? whiteTime : blackTime;
-            const minutes = String(Math.floor(time / 60)).padStart(2, '0');
-            const seconds = String(time % 60).padStart(2, '0');
-            timerElement.innerText = `${color.charAt(0).toUpperCase() + color.slice(1)}: ${minutes}:${seconds}`;
-            if (time <= 0) {
+            function startTimer() {
                 clearInterval(timerInterval);
-                alert(`${color.charAt(0).toUpperCase() + color.slice(1)} time's up!`);
+                timerInterval = setInterval(() => {
+                    if (turn === 'white') {
+                        whiteTime--;
+                        updateTimerDisplay('white');
+                    } else {
+                        blackTime--;
+                        updateTimerDisplay('black');
+                    }
+                }, 1000);
             }
-        }
 
-        // Create the chessboard
-        function createChessboard() {
-            for (let row = 0; row < 8; row++) {
-                for (let col = 0; col < 8; col++) {
-                    const isLightSquare = (row + col) % 2 === 0;
-                    const square = new fabric.Rect({
-                        left: col * squareSize,
-                        top: row * squareSize,
-                        fill: isLightSquare ? '#eee' : '#8B4513',
-                        width: squareSize,
-                        height: squareSize,
+            function updateTimerDisplay(color) {
+                const timerElement = document.getElementById(`${color}-timer`);
+                const time = color === 'white' ? whiteTime : blackTime;
+                const minutes = String(Math.floor(time / 60)).padStart(2, '0');
+                const seconds = String(time % 60).padStart(2, '0');
+                timerElement.innerText = `${color.charAt(0).toUpperCase() + color.slice(1)}: ${minutes}:${seconds}`;
+                if (time <= 0) {
+                    clearInterval(timerInterval);
+                    alert(`${color.charAt(0).toUpperCase() + color.slice(1)} time's up!`);
+                }
+            }
+
+            function createChessboard() {
+                for (let row = 0; row < 8; row++) {
+                    for (let col = 0; col < 8; col++) {
+                        const isLightSquare = (row + col) % 2 === 0;
+                        const square = new fabric.Rect({
+                            left: col * squareSize,
+                            top: row * squareSize,
+                            fill: isLightSquare ? '#eee' : '#8B4513',
+                            width: squareSize,
+                            height: squareSize,
+                            selectable: false
+                        });
+                        canvas.add(square);
+                    }
+                }
+
+                // Mark ranks (1-8)
+                for (let i = 0; i < 8; i++) {
+                    const text = new fabric.Text((8 - i).toString(), {
+                        left: 0,
+                        top: i * squareSize + squareSize / 2,
+                        fontSize: 20,
+                        originX: 'center',
+                        originY: 'center',
                         selectable: false
                     });
-                    canvas.add(square);
+                    canvas.add(text);
+                }
+
+                // Mark files (a-h)
+                for (let i = 0; i < 8; i++) {
+                    const text = new fabric.Text(String.fromCharCode(97 + i), {
+                        left: i * squareSize + squareSize / 2,
+                        top: 400,
+                        fontSize: 20,
+                        originX: 'center',
+                        originY: 'center',
+                        selectable: false
+                    });
+                    canvas.add(text);
                 }
             }
-        }
 
-        // Load SVG pieces onto the chessboard
-        function addPieces() {
-            const pieces = {
-                'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-                'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-                'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-                'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-                'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-                'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-                'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-                'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-                'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-                'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-                'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-                'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-            };
+            function addPieces() {
+                const pieces = {
+                    'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+                    'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+                    'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+                    'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+                    'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
+                    'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+                    'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+                    'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+                    'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+                    'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+                    'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+                    'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+                };
 
-            const boardState = [
-                ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-                ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-                ['.', '.', '.', '.', '.', '.', '.', '.'],
-                ['.', '.', '.', '.', '.', '.', '.', '.'],
-                ['.', '.', '.', '.', '.', '.', '.', '.'],
-                ['.', '.', '.', '.', '.', '.', '.', '.'],
-                ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-                ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-            ];
+                const boardState = [
+                    ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+                    ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+                    ['.', '.', '.', '.', '.', '.', '.', '.'],
+                    ['.', '.', '.', '.', '.', '.', '.', '.'],
+                    ['.', '.', '.', '.', '.', '.', '.', '.'],
+                    ['.', '.', '.', '.', '.', '.', '.', '.'],
+                    ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+                    ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+                ];
 
-            for (let row = 0; row < 8; row++) {
-                for (let col = 0; col < 8; col++) {
-                    const piece = boardState[row][col];
-                    if (piece !== '.') {
-                        fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
-                            const svgPiece = fabric.util.groupSVGElements(objects, options);
-                            svgPiece.set({
-                                left: col * squareSize + squareSize / 2,
-                                top: row * squareSize + squareSize / 2,
-                                originX: 'center',
-                                originY: 'center',
-                                hasControls: false,
-                                selectable: true,
-                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black'
+                for (let row = 0; row < 8; row++) {
+                    for (let col = 0; col < 8; col++) {
+                        const piece = boardState[row][col];
+                        if (piece !== '.') {
+                            fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
+                                const svgPiece = fabric.util.groupSVGElements(objects, options);
+                                svgPiece.set({
+                                    left: col * squareSize + squareSize / 2,
+                                    top: row * squareSize + squareSize / 2,
+                                    originX: 'center',
+                                    originY: 'center',
+                                    hasControls: false,
+                                    selectable: true,
+                                    pieceColor: piece === piece.toUpperCase() ? 'white' : 'black'
+                                });
+
+                                // Mouse event handlers
+                                svgPiece.on('mousedown', function() {
+                                    console.log(`Piece selected: ${piece}`);
+                                    if ((turn === 'white' && this.pieceColor === 'white') || 
+                                        (turn === 'black' && this.pieceColor === 'black')) {
+                                        canvas.setActiveObject(this);
+                                    }
+                                });
+                                svgPiece.on('mouseup', function() {
+                                    const activeObject = canvas.getActiveObject();
+                                    if (activeObject === this) {
+                                        const fromPosition = coordsToPosition(this.left, this.top);
+                                        console.log(`Move from: ${fromPosition}`);
+                                        alert(`Select destination square for ${piece} (current position: ${fromPosition})`);
+                                    }
+                                });
+                                canvas.add(svgPiece);
                             });
-                            
-                            // Mouse event handlers
-                            svgPiece.on('mousedown', function() {
-                                console.log(`Piece selected: ${piece}`);
-                                if ((turn === 'white' && this.pieceColor === 'white') || 
-                                    (turn === 'black' && this.pieceColor === 'black')) {
-                                    canvas.setActiveObject(this);
-                                }
-                            });
-                            svgPiece.on('mouseup', function() {
-                                const activeObject = canvas.getActiveObject();
-                                if (activeObject === this) {
-                                    const fromPosition = coordsToPosition(this.left, this.top);
-                                    console.log(`Move from: ${fromPosition}`);
-                                    alert(`Select destination square for ${piece} (current position: ${fromPosition})`);
-                                }
-                            });
-                            canvas.add(svgPiece);
-                        });
+                        }
                     }
                 }
             }
-        }
 
-        function coordsToPosition(left, top) {
-            const col = Math.floor(left / squareSize);
-            const row = 8 - Math.floor(top / squareSize);
-            return String.fromCharCode(col + 'a'.charCodeAt(0)) + row;
-        }
-
-        function updateHistory(move) {
-            history.push(move);
-            const historyDiv = document.getElementById('history');
-            historyDiv.innerHTML = history.join('<br/>');
-        }
-
-        function movePiece(from, to) {
-            const piece = canvas.getActiveObject();
-            if (!piece) return;
-
-            const fromCoords = positionToCoords(from);
-            const toCoords = positionToCoords(to);
-
-            if (piece && piece.left === fromCoords.x && piece.top === fromCoords.y) {
-                piece.set({
-                    left: toCoords.x,
-                    top: toCoords.y,
-                });
-                piece.setCoords();
-                canvas.renderAll();
-                updateHistory(`${piece.pieceColor} moves from ${from} to ${to}`);
-                turn = turn === 'white' ? 'black' : 'white'; // Switch turns
-                startTimer(); // Restart timer for the next player
+            function coordsToPosition(left, top) {
+                const col = Math.floor(left / squareSize);
+                const row = 8 - Math.floor(top / squareSize);
+                return String.fromCharCode(col + 'a'.charCodeAt(0)) + row;
             }
-        }
 
-        function positionToCoords(position) {
-            const col = position.charCodeAt(0) - 'a'.charCodeAt(0);
-            const row = 8 - parseInt(position[1]);
-            return {
-                x: col * squareSize + squareSize / 2,
-                y: row * squareSize + squareSize / 2
-            };
-        }
-
-        window.addEventListener('keydown', function(event) {
-            if (event.key.match(/[a-h][1-8]/)) { // Check for valid square
-                const from = prompt("Enter the piece's current position (e.g., e2):");
-                if (from) {
-                    movePiece(from, event.key); // Move to the square indicated by the key
-                }
+            function updateHistory(move) {
+                history.push(move);
+                const historyDiv = document.getElementById('history');
+                historyDiv.innerHTML = history.join('<br/>');
             }
+
+            function movePiece(from, to) {
+                const piece
+            }
+
+            createChessboard();
+            addPieces();
         });
-
-        createChessboard();
-        addPieces();
-        startTimer();
     </script>
 </body>
 </html>
