--- a/fabricjschess/restart2.html
+++ b/fabricjschess/restart2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabric.js Chessboard with SVG Pieces</title>
+    <title>Fabric.js Chessboard with Moveable Pieces</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <style>
         canvas {
@@ -20,6 +20,9 @@
         // Size of each square
         const squareSize = 50;
 
+        // Chess piece colors and turn handling
+        let turn = 'white'; // White goes first
+
         // Create the chessboard
         function createChessboard() {
             for (let row = 0; row < 8; row++) {
@@ -28,7 +31,7 @@
                     const square = new fabric.Rect({
                         left: col * squareSize,
                         top: row * squareSize,
-                        fill: isLightSquare ? '#eee' : '#333',
+                        fill: isLightSquare ? '#eee' : '#8B4513', // Dark brown for dark squares
                         width: squareSize,
                         height: squareSize,
                         selectable: false
@@ -41,17 +44,17 @@
         // Load SVG pieces onto the chessboard
         function addPieces() {
             const pieces = {
-                'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg', // black rook yes
+                'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg', // black rook
                 'n': 'https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_ndt45.svg', // black knight
                 'b': 'https://upload.wikimedia.org/wikipedia/commons/e/e4/Chess_bdt45.svg', // black bishop
                 'q': 'https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qdt45.svg', // black queen
-                'k': 'Chess_kdt45.svg', // black king
+                'k': 'https://upload.wikimedia.org/wikipedia/commons/6/6b/Chess_kdt45.svg', // black king
                 'p': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_pdt45.svg', // black pawn
-                'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg', // white rook yes
+                'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg', // white rook
                 'N': 'https://upload.wikimedia.org/wikipedia/commons/2/25/Chess_nlt45.svg', // white knight
                 'B': 'https://upload.wikimedia.org/wikipedia/commons/7/74/Chess_blt45.svg', // white bishop
                 'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/1a/Chess_qlt45.svg', // white queen
-                'K': 'Chess_klt45.svg', // white king
+                'K': 'https://upload.wikimedia.org/wikipedia/commons/5/5c/Chess_klf45.svg', // white king
                 'P': 'https://upload.wikimedia.org/wikipedia/commons/3/39/Chess_plt45.svg'  // white pawn
             };
 
@@ -78,7 +81,24 @@
                                 top: row * squareSize + squareSize / 2,
                                 originX: 'center',
                                 originY: 'center',
-                                selectable: false // Pieces are not selectable
+                                hasControls: false,
+                                selectable: true, // Pieces are selectable
+                                pieceColor: piece === piece.toUpperCase() ? 'white' : 'black' // Track the piece color
+                            });
+                            svgPiece.on('mousedown', function() {
+                                if ((turn === 'white' && this.pieceColor === 'white') || 
+                                    (turn === 'black' && this.pieceColor === 'black')) {
+                                    this.set({ opacity: 0.5 });
+                                    canvas.setActiveObject(this);
+                                } else {
+                                    this.set({ selectable: false });
+                                }
+                            });
+                            svgPiece.on('mouseup', function() {
+                                if (canvas.getActiveObject() === this) {
+                                    this.set({ opacity: 1 });
+                                    turn = turn === 'white' ? 'black' : 'white'; // Switch turns
+                                }
                             });
                             canvas.add(svgPiece);
                         });
@@ -90,6 +110,15 @@
         // Initialize the chessboard and add the pieces
         createChessboard();
         addPieces();
+
+        // Enable piece dragging
+        canvas.on('object:moving', function(e) {
+            const obj = e.target;
+            obj.set({
+                left: Math.round(obj.left / squareSize) * squareSize + squareSize / 2,
+                top: Math.round(obj.top / squareSize) * squareSize + squareSize / 2
+            });
+        });
     </script>
 </body>
 </html>
